# coup-rl

./: .gitignore  pyproject.toml
coup_ai/: flow.py  play.py  print_graph.py
coup_ai/display/: print.py
coup_ai/gamerules/: actions.py  cards.py  deck.py  game.py  player.py  settings.py  step.py
coup_ai/player/: random_player.py
notes/: game.txt
